<resources>
    <string name="app_name">Break Out</string>
    <string name="title_activity_breakout_maps">Map</string>
    <string name="Survival_guide">Survival Guide </string>
    <string name="evacuate"> Have You Evacuated?? </string>
    <string name="hurricane">Hurricane</string>
    <string name="earthQ">Earthquake</string>
    <string name="Hreq1">Find glahslights and batteries</string>
    <string name="Hreq2">Having or looking for a First Aid Kit ocould be essential</string>
    <string name="Hreq3">Leave low lying areas</string>
    <string name="Hreq4">Stay away from windows or cover them with boards</string>
    <string name="Hreq5">If you are ordered to evacuate do so immediately</string>
    <string name= "Precautions">Precautions to consider</string>
    <string name= "apikey">AIzaSyCfK9FioKFvHXHYCPlyXdgim6lHudPSndY</string>
</resources>
